# 0latency

./: .gitignore  0LATENCY-LAUNCH-CONTACTS.md  0LATENCY-STRATEGIC-DIRECTION-MARCH-26.md  0LATENCY_WRAPPER_COMPLETE.md  0latency-auto-context-injection.md  0latency-design-audit-2026-03-30.md  0latency-gtm-launch-plan.md  0latency-integration-plan.md  0latency-roadmap-COMPLETE.md  0latency-site-status.md  AGENTS.md  AGENTS.md.bak  CLAUDE_CODE_PHASE4_BRIEF.txt  COMPACTION-PROTOCOL.md  GAP-ANALYSIS-STRATEGIC-MEMORY-FAILURE.md  GTM-TACTICAL-EXECUTION.md  HANDOFF.md  HEARTBEAT.md  IDENTITY.md  INCIDENT-REPORT-0LATENCY-RECALL-BROKEN.md  JUSTIN-TODO-2026-03-31.md  KEY_PEOPLE.md  MEMORY.md  MEMORY.md.bak  MEMORY_CONTEXT.md  MEMORY_REFERENCE.md  MISSION_CONTROL.md  MISSION_CONTROL_TEAM.md  PHASE4-6-CONSTITUTION.md  PLANNING_QUICK_REF.md  PLANNING_TEMPLATE.md  POST_LAUNCH_ACTIONS.md  README.md  RECALL.md  RESEARCH.md  STOP_PROTOCOL.md  SUB_AGENT_ORCHESTRATION.md  THOMAS_API_KEY.txt  TODO-intelligence-v2.md  TODO-mission-control-expansion.md  (+26 more)
.openclaw/: workspace-state.json
0latency-chrome-extension.backup-20260331-143454/: README.md
0latency-chrome-extension.backup-20260402-195658/: CLAUDE_CODE_TASK.md  manifest.json
0latency-contribution-reviewer/: .env.template  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TESTING.md  config.yaml  main.py  requirements.txt  schema.sql  setup.sh
0latency-registry/: .mcpregistry_registry_token  server.json
MY-VOICE/: QUICK-REFERENCE.md  THOMAS-VS-JUSTIN-VOICE.md  claude-system-context.md  improved-writing-instructions.md  justin-voice-profile.md  voice-pattern-analysis.md
alerts-archive/: email-alerts-2026-03-30T1400.txt  loop-alerts-20260407_152459.txt  scout-20260407-163712.txt
atlas/: weekly_snapshot.py
evaluations/: 0latency-7-skills-assessment.md  competitive-analysis-mem0-vs-0latency.md
examples/: README.md  anthropic_example.py  gemini_example.py  openai_example.py
lance/: execute.py  pending-summary.txt  send_approved.py
loop/: OPERATING-PROTOCOL.md  STATUS.md  alerts-pending.txt  baseline-report.md  comprehensive_scan.sh  first-scan.txt  fix-loop.sh  historical-hn-scan.md  historical_scan.py  launch-engagement-list.md  monitoring-channels.json  run_v3.sh  scan.py  scan_intelligence.py  scan_intelligence_v2.py  scan_v3.py
mcp/: package.json  server.ts
memory-product/: .env.example  .gitignore  0LATENCY-TECH-STACK-2026-03-26.md  AI_DISCOVERABILITY_DEPLOYMENT_REPORT.md  ARCHITECTURE.md  ATTACK_TEST_PLAN.md  AUDIT_REPORT_V2.md  AUDIT_REPORT_V3.md  BUSINESS_SYSTEMS_GAP_ANALYSIS.md  CHANGELOG.md  CHECKPOINT-6-DIAGNOSTICS-SUMMARY.md  CHECKPOINT-6-OPT1-PARALLELIZATION.md  CHECKPOINT-6-OPT2-GIN-INDEX.md  CHECKPOINT-6-OPT3-S3-PROFILING.md  CHECKPOINT-6-PREFLIGHT-PART2.md  CHECKPOINT-6-PREFLIGHT.md  CLAUDE_CODE_TASK.md  COMPETITIVE-ANALYSIS-MEM0.md  CORS_FIX_SUMMARY.md  (+66 more)
memory-product-staging/: ACTION-PLAN-BREAKOUT.md  ATTACK_TEST_RESULTS.md  AUDIT_BRIEF.md  AUDIT_COMPLETE.md  AUDIT_REPORT.md  BUILD_LOG.md  COGNITIVE_FIREWALL_SPEC.md  CONTRIBUTING.md  DEMO_THREAD.md  DEPLOY-SITE-UPDATES.md  DEPLOYMENT_REPORT.md  DISASTER_RECOVERY.md  Dockerfile  ENTERPRISE_BUILD_PLAN.md  ENTERPRISE_GAP_SUMMARY.md  ENTERPRISE_READINESS_GAP_ANALYSIS.md  FIRST_TWEET.md  GAP_ANALYSIS_4.md  GAP_ANALYSIS_5.md  GTM-STRATEGY.md  HARDENING_CHECKLIST.md  HN_POST.md  INCIDENT_RESPONSE.md  LAUNCH_TEST_RESULTS.md  LOAD_TEST_RESULTS.md  NATE_VIDEO_NOTES.md  NIGHT_SHIFT_WORK.md  OBSERVABILITY_DELIVERY.md  OPENAI_PLUGIN_SUBMISSION.md  OUTREACH_DRAFTS.md  PRODUCT_ROADMAP.md  QA-RESULTS-2026-03-25.md  SECURITY.md  SECURITY_AUDIT_REPORT_2026-03-25.md  SECURITY_AUDIT_SUMMARY.md  SECURITY_FIXES_ACTIONABLE.md  SECURITY_REPORT.md  SITE_AUDIT.md  TEST_REPORT_2026-03-25.md  TODO.md  (+8 more)
memory-product/sdk/python/: README.md  pyproject.toml  setup.py
memory-product/sdk/python/src/zerolatency/: __init__.py  client.py
memory-product/sdk/python/src/zerolatency/wrappers/: openai.py
memory-product/sdk/python/zero_latency/: __init__.py  client.py
memory-product/sdk/python/zerolatency/: __init__.py  client.py
python/: README.md  pyproject.toml  setup.py
python/zerolatency/: __init__.py
python/zerolatency/wrappers/: __init__.py  gemini.py
(+1800 files in other folders)
